--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=gondola.proxy.rlwy.net;Port=59265;Database=railway;Username=postgres;Password=pKRNfybOmxvscluxtempzhlaLRqEtyOM;SSL Mode=Require;Trust Server Certificate=true;"
+        "DefaultConnection": "Host=gondola.proxy.rlwy.net;Port=59265;Database=railway;Username=postgres;Password=pKRNfybOmxvscluxtempzhlaLRqEtyOM;SslMode=Require;Trust Server Certificate=true"
     },
     "Logging": {
         "LogLevel": {
