--- a/railwayapp.csproj
+++ b/railwayapp.csproj
@@ -7,7 +7,7 @@
     <UserSecretsId>aspnet-railwayapp-fd4e44c6-d999-4fc2-ad08-d254a6e87c13</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
-	<InvariantGlobalization>true</InvariantGlobalization>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +18,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.22" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+  </ItemGroup>
+
+  <!-- هذه الإضافة مهمة جدًا لكي تُرفع Views مع المشروع -->
+  <ItemGroup>
+    <Content Include="Views\\*.cshtml" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
